t/resource/lib/Test/UsedModules/Fail/2.pm
package Test::UsedModules::Fail::2;
use strict;
use warnings;
use utf8;

# meta: whitelist: File::Basename
use File::Basename ();

1;
